# SOAR-Phishing-Incident-Response

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
config/: settings.py
frontend/: Dockerfile
scripts/: init_db.py  setup_test_db.py
soar_phishing_project/: README.md  enrich_iocs.py  extract_iocs.py  isolate_account.py  playbook_demo.py  risk_score.py
src/api/: __init__.py  auth.py
src/core/: exceptions.py  ioc_extractor.py  risk_assessment.py  security.py
src/db/: database.py
src/intel/: threat_intel.py
src/models/: base.py  incident.py  threat_intel.py  user.py
src/schemas/: __init__.py  token.py
tests/: conftest.py
tests/integration/: test_auth.py
